--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@tenderly/hardhat-tenderly": "^1.0.13",
     "hardhat": "^2.9.5"
   },
   "devDependencies": {
